// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterExpression allows a "distinct" modifier 1`] = `
{
  "$distinct": true,
  "$filterType": "of",
  "$of": [
    {
      "$course": {
        "department": "CSCI",
        "number": 121,
      },
      "$type": "course",
    },
    {
      "$course": {
        "department": "CSCI",
        "number": 125,
      },
      "$type": "course",
    },
  ],
  "$type": "filter",
}
`;

exports[`FilterExpression allows filtering by a list of valid courses 1`] = `
{
  "$distinct": false,
  "$filterType": "of",
  "$of": [
    {
      "$course": {
        "department": "CSCI",
        "number": 121,
      },
      "$type": "course",
    },
    {
      "$course": {
        "department": "CSCI",
        "number": 125,
      },
      "$type": "course",
    },
  ],
  "$type": "filter",
}
`;

exports[`FilterExpression allows filtering by a where-expression 1`] = `
{
  "$distinct": false,
  "$filterType": "where",
  "$type": "filter",
  "$where": {
    "$key": "dept",
    "$operator": "$eq",
    "$type": "qualification",
    "$value": "ASIAN",
  },
}
`;
